<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nama"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nim"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="1"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/nim"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/notelp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="1"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_no_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/notelp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/prodi"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_prodi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/prodi"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/status_transfer"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_status_transfer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_transfer"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/status_investasi"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_status_investasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_investasi"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/kampus"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_kampus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kampus"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/konsentrasi"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_konsentrasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/konsentrasi"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/status_kelas"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_status_kelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_kelas"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />

            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/iv_gambar"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_weight="1"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

    </LinearLayout>
</ScrollView>